add_library (Chakra.Backend
    AgenPeeps.cpp
    Backend.cpp
    BackendOpCodeAttrAsmJs.cpp
    BackwardPass.cpp
    BailOut.cpp
    CaseNode.cpp
    CodeGenAllocators.cpp
    CodeGenNumberAllocator.cpp
    CodeGenWorkItem.cpp
    DbCheckPostLower.cpp
    Debug.cpp
    EmitBuffer.cpp
    Encoder.cpp
    FlowGraph.cpp
    Func.cpp
    GlobOpt.cpp
    GlobOptBailOut.cpp
    GlobOptExpr.cpp
    GlobOptFields.cpp
    GlobOptIntBounds.cpp
    GlobOptSimd128.cpp
    IR.cpp
    IRBuilder.cpp
    IRBuilderAsmJs.cpp
    IRType.cpp
    IRViewer.cpp
    InductionVariable.cpp
    Inline.cpp
    InlineeFrameInfo.cpp
    InliningDecider.cpp
    InliningHeuristics.cpp
    IntBounds.cpp
    InterpreterThunkEmitter.cpp
    JnHelperMethod.cpp
    LinearScan.cpp
    Lower.cpp
    LowerMDShared.cpp
    LowerMDSharedSimd128.cpp
    NativeCodeData.cpp
    NativeCodeGenerator.cpp
    Opnd.cpp
    PDataManager.cpp
    Peeps.cpp
    PreLowerPeeps.cpp
    PrologEncoder.cpp
    QueuedFullJitWorkItem.cpp
    Region.cpp
    SccLiveness.cpp
    Security.cpp
    SimpleJitProfilingHelpers.cpp
    SimpleLayout.cpp
    SwitchIRBuilder.cpp
    Sym.cpp
    SymTable.cpp
    TempTracker.cpp
    ValueRelativeOffset.cpp
    amd64\EncoderMD.cpp
    amd64\LinearScanMD.cpp
    amd64\LowererMDArch.cpp
    amd64\PeepsMD.cpp
    amd64\PrologEncoderMD.cpp
    arm64\EncoderMD.cpp
    arm64\LowerMD.cpp
    arm\EncoderMD.cpp
    arm\LegalizeMD.cpp
    arm\LinearScanMD.cpp
    arm\LowerMD.cpp
    arm\PeepsMD.cpp
    arm\UnwindInfoManager.cpp
    i386\EncoderMD.cpp
    i386\LinearScanMD.cpp
    i386\LowererMDArch.cpp
    i386\PeepsMD.cpp
    )

target_include_directories (
    Chakra.Backend PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
